Stop wrapping of text

--- a/src/main/webapp/css/tests.css
+++ b/src/main/webapp/css/tests.css
@@ -7,8 +7,8 @@
 }
 .unittests ul {
   list-style: none;
-  padding: 0px 0px;
-  margin: 0px 0px;
+  padding: 0 0;
+  margin: 0 0;
 }
 
 .unittests .actions {
@@ -27,4 +27,8 @@ a.unittestproject {
 .unreliable .statechange, .unreliable .runs, .unreliable .rate {
   text-align: right;
   width: 50px;
+}
+
+.user, .userstate {
+    white-space: nowrap;
 }
